# QRCoder

./: CMakeLists.txt
src/: QRDecoder.cpp  QRDecoder.h  QRLocator.cpp  QRLocator.h  QRParser.cpp  QRParser.h  main.cpp  qr.cpp  qr.h
